# ricevm

./: .editorconfig  .gitignore  .gitmodules  404.html  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  ROADMAP.md  flake.nix  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: docs.yml  lints.yml  release.yml  tests.yml
api-reference/: index.html
assets/diagrams/: usage_workflow.dot
crates/rice-cli/: Cargo.toml
crates/rice-cli/src/: main.rs
crates/rice-cli/tests/: pipeline_tests.rs
crates/rice-core/: Cargo.toml
crates/rice-core/src/: error.rs  lib.rs  module.rs  opcode.rs  types.rs
crates/rice-execute/: Cargo.toml
crates/rice-execute/src/: address.rs  builtin.rs  channel.rs  data.rs  debugger.rs  draw.rs  filetab.rs  frame.rs  gc.rs  heap.rs  lib.rs  math.rs  memory.rs  scheduler.rs  sys.rs  tk.rs  vm.rs
crates/rice-execute/src/ops/: arith.rs  big.rs  compare.rs  concurrency.rs  control.rs  convert.rs  data_move.rs  fixedpoint.rs  float.rs  heap.rs  list.rs  mod.rs  pointer.rs  string.rs
crates/rice-loader/: Cargo.toml
crates/rice-loader/fuzz/: Cargo.toml
crates/rice-loader/src/: decode.rs  lib.rs  reader.rs
crates/rice-loader/tests/: integration_tests.rs  property_tests.rs
crates/ricevm-cli/: Cargo.toml
crates/ricevm-cli/src/: main.rs
crates/ricevm-cli/tests/: pipeline_tests.rs
crates/ricevm-core/: Cargo.toml
crates/ricevm-core/src/: instruction.rs  module.rs  types.rs
crates/ricevm-execute/: Cargo.toml
crates/ricevm-execute/src/: audio.rs  builtin.rs  channel.rs  debugger.rs  draw.rs  filetab.rs  frame.rs  gc.rs  heap.rs  lib.rs  math.rs  scheduler.rs  sys.rs  tk.rs  vm.rs
crates/ricevm-execute/src/ops/: arith.rs  big.rs  compare.rs  concurrency.rs  control.rs  data_move.rs  fixedpoint.rs  float.rs  heap.rs  list.rs  pointer.rs  string.rs
crates/ricevm-limbo/: Cargo.toml
crates/ricevm-limbo/examples/: batch_parse.rs  compile_advanced.rs  compile_chan.rs  compile_echo.rs  compile_echo_simple.rs  compile_features.rs  compile_hello.rs  compile_run.rs  compile_strings.rs  compile_types.rs  compile_write.rs
crates/ricevm-limbo/src/: ast.rs  codegen.rs  includes.rs  lexer.rs  lib.rs  parser.rs  symtab.rs  token.rs  writer.rs
crates/ricevm-limbo/tests/: parse_inferno.rs
crates/ricevm-loader/: Cargo.toml
crates/ricevm-loader/fuzz/fuzz_targets/: fuzz_load.rs
crates/ricevm-loader/src/: decode.rs
docs/: api-reference.md  architecture.md  dis-spec-mapping.md  examples.md  getting-started.md  index.md  limitations.md  opcodes.md
docs/assets/diagrams/: usage_workflow.dot
examples/: index.html
getting-started/: index.html
limitations/: index.html
scripts/: test-limbo.sh
search/: search_index.json
