[workspace]
resolver = "2"
members = [
    "crates/rice-core",
    "crates/rice-loader",
    "crates/rice-execute",
    "crates/rice-cli",
]

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2024"
authors = ["Hassan Abedi <hassan.abedi.t@gmail.com>"]
repository = "https://github.com/habedi/ricevm"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
ricevm_core = { path = "crates/rice-core", package = "ricevm-core" }
ricevm_loader = { path = "crates/rice-loader", package = "ricevm-loader" }
ricevm_execute = { path = "crates/rice-execute", package = "ricevm-execute" }
anyhow = "1.0"
thiserror = "2.0.18"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
