[workspace]
resolver = "2"
members = [
    "crates/ricevm-core",
    "crates/ricevm-loader",
    "crates/ricevm-execute",
    "crates/ricevm-cli",
]

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2024"
authors = ["Hassan Abedi <hassan.abedi.t+ricevm@gmail.com>"]
repository = "https://github.com/habedi/ricevm"
license = "MIT OR Apache-2.0"
publish = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "unwind"
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1

[workspace.dependencies]
ricevm_core = { path = "crates/ricevm-core", package = "ricevm-core" }
ricevm_loader = { path = "crates/ricevm-loader", package = "ricevm-loader" }
ricevm_execute = { path = "crates/ricevm-execute", package = "ricevm-execute" }
anyhow = "1.0"
thiserror = "2.0.18"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
