[package]
name = "rice-execute"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Execution engine for Rice bytecode"

[dependencies]
rice_core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
