[package]
name = "ricevm-execute"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Execution engine for RiceVM bytecode"

[features]
default = []
gui = ["sdl2"]

[dependencies]
ricevm_core.workspace = true
ricevm_loader.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
sdl2 = { version = "0.37", optional = true }
