[package]
name = "ricevm-loader"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Binary format parser for Rice"

[dependencies]
ricevm_core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
