[package]
name = "ricevm-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish = false
license.workspace = true
description = "Command line interface for RiceVM"

[features]
default = []
gui = ["ricevm_execute/gui"]

[dependencies]
ricevm_core.workspace = true
ricevm_loader.workspace = true
ricevm_execute.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
colored.workspace = true
