[package]
name = "ricevm-limbo"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish = false
license.workspace = true
description = "The Limbo programming language compiler for RiceVM"

[dependencies]
ricevm_core.workspace = true
thiserror.workspace = true

[dev-dependencies]
ricevm_loader.workspace = true
