[package]
name = "ricevm-loader"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish = false
license.workspace = true
description = "The binary format parser for RiceVM bytecode"

[dependencies]
ricevm_core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
